<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">车联网</string>

    <string name="clear_cache_menu">Clear Caches</string>
    <string name="clear_cache_complete_toast">Caches have been cleared</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="no_network_connection_toast">No network connection found</string>

    <!-- 页面名称 -->

    <string name="main_navigation_home">首页</string>
    <string name="main_navigation_im">选房清单</string>
    <string name="main_navigation_interest">地图</string>
    <string name="main_navigation_user">我的</string>

    <string name="page">page</string>
    <string name="home_parking">停车场</string>
    <string name="home_gas">加油站</string>
    <string name="home_traffic_violation">违章查询</string>
    <string name="home_tmc">实时路况</string>
    <string name="home_4s">4S店</string>
    <string name="home_insurance">车险</string>
    <string name="home_emergency">一键应急</string>
    <string name="home_route">路径规划</string>
    <string name="home_route_start">设置起点</string>
    <string name="home_route_end">设置终点</string>

    <string name="market_info_title">大盘行情   dds</string>

    <string name="progress_loading">加载中，请稍候</string>
    <string name="progress_load_error">加载失败，点击屏幕刷新</string>
    <string name="progress_load_no_data">暂无数据</string>

    <!-- 手势密码 -->
    <string name="string_security_setting">安全设置</string>
    <string name="string_gesture_password">手势密码</string>
    <string name="string_modify_gesture_password">修改手势密码</string>
    <string name="string_set_gesture_password">设置手势密码</string>
    <string name="string_guide_info">您可以创建一个</string>
    <string name="string_guide_info_right">手势密码图案</string>
    <string name="string_guide_info_last">使用手势密码进行登录，安全、便捷</string>

    <string name="retry_gesture">重新绘制解锁图案</string>
    <string name="draw_gesture">绘制解锁图案</string>
    <string name="draw_gesture_again">再次输入手势密码</string>
    <string name="draw_gesture_not_same">与上次绘制不一致，请重新绘制</string>
    <string name="gesture_login_five_failed">登录错误过多，账号被注销</string>
    <string name="draw_gesture_need_six_dot">至少连接六个点，请重新绘制</string>
    <string name="draw_gesture_left_chances">输入手势密码错误，还有%s次机会</string>
    <string name="forget_gesture_need_login">忘记手势密码，需重新登录</string>
    <string name="draw_gesture_error_clear_login">输入手势密码错误5次，登录状态已清除</string>
    <string name="set_complete">设置成功</string>
    <string name="forget_gesture">忘记手势密码</string>
    <string name="title_activity_btn_gas">BtnGasActivity</string>
    <string name="title_activity_btn_parking">BtnParkingActivity</string>
    <string name="title_activity_btn_route_plan">BtnRoutePlanActivity</string>
    <string name="title_activity_btn_4s">Btn4SActivity</string>
    <string name="title_activity_btn_traffic_condition">BtnTraffiConditionActivity</string>
    <string name="title_activity_btn_insurance">btn_insurance</string>


    <!--地图上的字符串-->
    <string name="navigation">导航</string>
    <string name="goHere">去那</string>
    <string name="startNavigation">开始导航</string>
    <string name="quitNavigation">取消</string>
    <string name="avoidTrafficJam">避免堵车</string>
    <string name="avoidFee">少收费</string>
    <string name="avoidHighWay">避免高速</string>
    <string name="HighWayFirst">高速优先</string>
    <string name="preference">路线偏好设置</string>
    <string name="trafficCondition">路况</string>
    <string name="routePlan">路径规划</string>
    <string name="startNode">起点</string>
    <string name="endNode">终点</string>
    <string name="cityName">南京</string>
    <string name="keyWord">关键字:</string>


</resources>