<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/layout_main_header" />


    <TextView
        android:id="@+id/tvRoutePlanCity"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:hint="@string/cityName"
        android:textColor="@color/black" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:id="@+id/tvRoutePlanStartNode"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:hint="@string/startNode"
            android:padding="@dimen/space_20"
            android:textColor="@color/black"
            android:textSize="@dimen/big_text_size" />

        <ImageView
            android:id="@+id/imgSetMyLocationAsStartNode"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignParentRight="true"
            android:padding="@dimen/space_20"
            android:src="@drawable/route_icon_poi" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/space_10">


        <ImageView
            android:id="@+id/imgChangeStartNodeAndEndNode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/route_icon_exchange" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvRoutePlanEndNode"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:gravity="center"
            android:hint="@string/endNode"
            android:padding="@dimen/space_20"
            android:textColor="@color/black"
            android:textSize="@dimen/big_text_size" />


    </LinearLayout>

    <TextView
        android:id="@+id/tvRoutePlanBegin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:padding="@dimen/space_20"
        android:text="@string/routePlan"
        android:textColor="@color/black" />
</LinearLayout>